change post config and add descriptions to all posts

--- a/src/content/posts/bash-shortcut-copy-your-present-working-directory-to-your-clipboard/index.mdx
+++ b/src/content/posts/bash-shortcut-copy-your-present-working-directory-to-your-clipboard/index.mdx
@@ -2,6 +2,7 @@
 date: '2015-07-25T00:00:00.000Z'
 slug: 'bash-shortcut-copy-your-present-working-directory-to-your-clipboard'
 title: 'Bash Shortcut: Copy your Present Working Directory to your Clipboard'
+description: 'Create a bash alias that copies your `pwd` to your clipboard.'
 tags: ['Bash']
 ---
 
