--- a/src/content/posts/bash-shortcut-how-to-make-directory-and-change-directory-in-one-command/index.mdx
+++ b/src/content/posts/bash-shortcut-how-to-make-directory-and-change-directory-in-one-command/index.mdx
@@ -2,6 +2,7 @@
 date: '2015-07-25T00:00:00.000Z'
 slug: 'bash-shortcut-how-to-make-directory-and-change-directory-in-one-command'
 title: 'Bash Shortcut: How to Make Directory and Change Directory in One Command'
+description: 'Make a bash alias to make a new directory and change to it in one command.'
 tags: ['Bash']
 ---
 
