--- a/src/content/posts/how-i-stumbled-upon-normalizing-redux-state/index.mdx
+++ b/src/content/posts/how-i-stumbled-upon-normalizing-redux-state/index.mdx
@@ -4,6 +4,7 @@ date: '2017-05-18T00:00:00.000Z'
 slug: 'how-i-stumbled-upon-normalizing-redux-state'
 subtitle: "and later learned it's a real thing"
 title: 'How I Stumbled Upon Normalizing Redux State'
+description: 'Learn how I stumbled my way into discovering normalizing Redux state.'
 ---
 
 My most recent work project was an interesting challenge. I built an app (actually 2 Electron apps supporting 3 React apps communicating through WebSockets) that allowed a user (actually 4 simultaneous users) to look at an array of stories related to sea ports, select one, have a detail component pop up with more information about the story, and then move to the next or previous story from within the detail window.
