--- a/src/content/posts/how-to-be-more-successful-on-your-next-web-developer-job-hunt/index.mdx
+++ b/src/content/posts/how-to-be-more-successful-on-your-next-web-developer-job-hunt/index.mdx
@@ -4,6 +4,7 @@ slug: 'how-to-be-more-successful-on-your-next-web-developer-job-hunt'
 title: 'How to be More Successful on Your Next Web Developer Job Hunt'
 tags: ['Career']
 relevantCourseNickname: 'dsa'
+description: 'Here are some of the best tips I have on making your next web developer job hunt more successful.'
 ---
 
 If you follow me on Twitter, you may have seen this [tweet](https://twitter.com/kyleshevlin/status/1041735370478542851) go out into the universe. I'm in the process of exploring the next part of my career and asking you all to help me do that by spreading the word. Don't think spreading the word can make a difference? It totally can.
