--- a/src/content/posts/how-to-use-client-side-libraries-in-a-universal-javascript-app/index.mdx
+++ b/src/content/posts/how-to-use-client-side-libraries-in-a-universal-javascript-app/index.mdx
@@ -3,6 +3,7 @@ tags: ['React']
 date: '2016-12-01T00:00:00.000Z'
 slug: 'how-to-use-client-side-libraries-in-a-universal-javascript-app'
 title: 'How To Use Client Side Libraries in a Universal JavaScript App'
+description: 'Learn how to use client-only libraries in server-side rendered React apps.'
 ---
 
 At work, I am building a JavaScript application with universal rendering. There are a number of challenges with building a universally rendered application, but one challenge in particular is making sure code that should only run on the client doesn't cause the server to crash.
