--- a/src/content/posts/imagination/index.mdx
+++ b/src/content/posts/imagination/index.mdx
@@ -3,6 +3,7 @@ date: '2019-05-29T00:00:00.000Z'
 slug: 'a-plea-for-imagination'
 title: 'A Plea for Imagination'
 subtitle: 'aka Learn to Remix'
+description: 'You have an imagination. I am asking that you use it.'
 tags: ['Thoughts']
 ---
 
