--- a/src/content/posts/just-enough-fp-argument-order/index.mdx
+++ b/src/content/posts/just-enough-fp-argument-order/index.mdx
@@ -3,6 +3,7 @@ tags: ['Functional Programming', 'JavaScript']
 date: '2019-04-29T00:00:00.000Z'
 slug: 'just-enough-fp-argument-order'
 title: 'Just Enough FP: Argument Order'
+description: 'Learn about how argument order impacts the composability of higher order functions.'
 relatedPostsSlugs:
   [
     'just-enough-functional-programming-course-launch',
