--- a/src/content/posts/just-enough-fp-currying/index.mdx
+++ b/src/content/posts/just-enough-fp-currying/index.mdx
@@ -3,6 +3,7 @@ tags: ['Functional Programming', 'JavaScript']
 date: '2019-04-26T00:00:00.000Z'
 slug: 'just-enough-fp-currying'
 title: 'Just Enough FP: Currying'
+description: 'Learn what currying is, how to make curried functions, and what the pattern is useful for.'
 relatedPostsSlugs:
   [
     'just-enough-functional-programming-course-launch',
