--- a/src/content/posts/just-enough-fp-higher-order-functions/index.mdx
+++ b/src/content/posts/just-enough-fp-higher-order-functions/index.mdx
@@ -3,6 +3,7 @@ tags: ['Functional Programming', 'JavaScript']
 date: '2019-04-08T00:00:00.000Z'
 slug: 'just-enough-fp-higher-order-functions'
 title: 'Just Enough FP: Higher Order Functions'
+description: 'Learn what a "higher order" function is and why they are important.'
 relatedPostsSlugs:
   [
     'just-enough-functional-programming-course-launch',
