--- a/src/content/posts/just-enough-fp-immutability/index.mdx
+++ b/src/content/posts/just-enough-fp-immutability/index.mdx
@@ -3,6 +3,7 @@ tags: ['Functional Programming', 'JavaScript']
 date: '2019-04-21T00:00:00.000Z'
 slug: 'just-enough-fp-immutability'
 title: 'Just Enough FP: Immutability'
+description: 'Learn what "immutability" is and why it matters in functional programming'
 relatedPostsSlugs:
   [
     'just-enough-functional-programming-course-launch',
