--- a/src/content/posts/just-enough-fp-partial-application/index.mdx
+++ b/src/content/posts/just-enough-fp-partial-application/index.mdx
@@ -3,6 +3,7 @@ tags: ['Functional Programming', 'JavaScript']
 date: '2019-04-27T00:00:00.000Z'
 slug: 'just-enough-fp-partial-application'
 title: 'Just Enough FP: Partial Application'
+description: 'Learn what "partial application" is and why it matters in functional programming.'
 relatedPostsSlugs:
   [
     'just-enough-functional-programming-course-launch',
