--- a/src/content/posts/just-enough-fp-pure-functions/index.mdx
+++ b/src/content/posts/just-enough-fp-pure-functions/index.mdx
@@ -3,6 +3,7 @@ tags: ['Functional Programming', 'JavaScript']
 date: '2019-04-14T00:00:00.000Z'
 slug: 'just-enough-fp-pure-functions'
 title: 'Just Enough FP: Pure Functions'
+description: 'Learn what a "pure function" is, why they are important for functional programming, and how they can improve the quality of your code.'
 relatedPostsSlugs:
   [
     'just-enough-functional-programming-course-launch',
