--- a/src/content/posts/let-me-tell-you-about-this-cat/index.mdx
+++ b/src/content/posts/let-me-tell-you-about-this-cat/index.mdx
@@ -2,6 +2,7 @@
 date: '2018-08-21T00:00:00.000Z'
 slug: 'let-me-tell-you-about-this-cat'
 title: 'Let Me Tell You About This Cat'
+description: 'Allow me to share a deeply touching moment I shared with a local cat recently, and how I will never forget the encounter.'
 tags: ['Thoughts']
 ---
 
