--- a/src/content/posts/make-your-own-charts-in-react-without-a-charting-library-part-1/index.mdx
+++ b/src/content/posts/make-your-own-charts-in-react-without-a-charting-library-part-1/index.mdx
@@ -2,6 +2,7 @@
 date: '2017-06-24T00:00:00.000Z'
 slug: 'make-your-own-charts-in-react-without-a-charting-library'
 title: 'Make Your Own Charts in React Without a Charting Library'
+description: 'Learn how to make your own data chart with React and SVG without using a data visualization library.'
 tags: ['React', 'Data Visualization', 'SVG']
 ---
 
