--- a/src/content/posts/my-mock-interview-experience-with-rick-altherr-from-google/index.mdx
+++ b/src/content/posts/my-mock-interview-experience-with-rick-altherr-from-google/index.mdx
@@ -3,6 +3,7 @@ date: '2017-07-03T00:00:00.000Z'
 slug: 'my-mock-interview-experience-with-rick-altherr-from-google'
 subtitle: 'or Practice Without the Pressure'
 title: 'My Mock Interview Experience with Rick Altherr from Google'
+description: 'A recap of my mock interview experience with a Googler.'
 tags: ['Career']
 ---
 
@@ -13,10 +14,7 @@ A few days ago, I came across a tweet by Stephanie Hurlbut, a software engineer 
     If you would be up for giving someone a mock typical whiteboard interview to
     help them pass those (Skype or in person), reply to this tweet.
   </p>
-  — Stephanie Hurlburt (@sehurlburt){' '}
-  <a href="https://twitter.com/sehurlburt/status/872913584769990656">
-    June 8, 2017
-  </a>
+  — Stephanie Hurlburt (@sehurlburt) <a href="https://twitter.com/sehurlburt/status/872913584769990656">June 8, 2017</a>
 </blockquote>
 
 I was really intrigued by this idea and was hoping someone would rise to the occasion. As it so happens, a few awesome people offered to give mock interviews. In particular, I came across Senior Software Engineer at Google Rick Altherr's offer.
@@ -30,10 +28,7 @@ I was really intrigued by this idea and was hoping someone would rise to the occ
   <p lang="en" dir="ltr">
     I'm waiting for my first taker
   </p>
-  — Rick Altherr (@kc8apf){' '}
-  <a href="https://twitter.com/kc8apf/status/879533477854560257">
-    June 27, 2017
-  </a>
+  — Rick Altherr (@kc8apf) <a href="https://twitter.com/kc8apf/status/879533477854560257">June 27, 2017</a>
 </blockquote>
 
 Well, as you can guess, I took Rick up on his offer and setup an interview with him.
