--- a/src/content/posts/not-all-just-javascript-is-the-same/index.mdx
+++ b/src/content/posts/not-all-just-javascript-is-the-same/index.mdx
@@ -2,6 +2,7 @@
 date: '2017-09-07T00:00:00.000Z'
 slug: 'not-all-just-javascript-is-the-same'
 title: 'Not All &ldquo;Just JavaScript&rdquo; is the Same'
+description: 'A not-so-small rant about why two JavaScript frameworks can feel so vastly different.'
 tags: ['Thoughts']
 ---
 
