--- a/src/content/posts/shevyjs/index.mdx
+++ b/src/content/posts/shevyjs/index.mdx
@@ -2,6 +2,7 @@
 date: '2017-05-17T00:00:00.000Z'
 slug: 'shevyjs'
 title: 'ShevyJS'
+description: 'Announcing a new library, ShevyJS, a vertical-rhythm library for CSS-in-JS.'
 tags: ['JavaScript']
 ---
 
