--- a/src/content/posts/small-gripe-target_blank/index.mdx
+++ b/src/content/posts/small-gripe-target_blank/index.mdx
@@ -2,6 +2,7 @@
 date: '2015-01-26T00:00:00.000Z'
 slug: 'small-gripe-target_blank'
 title: 'Small Gripe: Target=&ldquo;_blank&rdquo;'
+description: 'A tiny rant about `target="_blank"`.'
 tags: ['Thoughts']
 ---
 
