--- a/src/content/posts/the-importance-of-competing-thoughts/index.mdx
+++ b/src/content/posts/the-importance-of-competing-thoughts/index.mdx
@@ -2,6 +2,7 @@
 date: '2018-11-10T00:00:00.000Z'
 slug: 'the-importance-of-competing-thoughts'
 title: 'The Importance of Competing Thoughts'
+description: "Sometimes it's important to hold two or more competing thoughts at the same time."
 tags: ['Thoughts']
 ---
 
