--- a/src/content/posts/the-role-of-timing-in-a-job-hunt/index.mdx
+++ b/src/content/posts/the-role-of-timing-in-a-job-hunt/index.mdx
@@ -2,6 +2,7 @@
 date: '2018-10-10T00:00:00.000Z'
 slug: 'the-role-of-timing-in-a-job-hunt'
 title: 'The Role of Timing In a Job Hunt'
+description: 'A discussion on the role of timing in your job hunt.'
 tags: ['Career']
 ---
 
