--- a/src/content/posts/what-i-love-about-react-1/index.mdx
+++ b/src/content/posts/what-i-love-about-react-1/index.mdx
@@ -4,6 +4,7 @@ date: '2017-04-22T00:00:00.000Z'
 slug: 'what-i-love-about-react-1'
 subtitle: 'Renders with Ternaries'
 title: 'What I Love About React #1'
+description: 'Learn how to use ternaries for conditional rendering in React.'
 ---
 
 This won't be a very long, nor deep, post. As I was working on some code this afternoon, a thought occurred to me. I love React. I really do. I find it so pleasant to work in React, and I can't always describe why. However, I have at least one reason I can describe, and I thought I'd share that with you right now. I'll share more as I think of others.
