--- a/src/content/posts/what-is-most-important-to-a-web-developer/index.mdx
+++ b/src/content/posts/what-is-most-important-to-a-web-developer/index.mdx
@@ -3,6 +3,7 @@ date: '2017-02-26T00:00:00.000Z'
 slug: 'what-is-most-important-to-a-web-developer'
 subtitle: 'the Tech, the Product, or the People'
 title: 'What is Most Important to a Web Developer?'
+description: 'I recently asked developers what was most important to them. The results were a bit surprising.'
 tags: ['Career']
 ---
 
@@ -17,10 +18,7 @@ Recently, I ran a poll on Twitter asking web developers what was most important 
     <a href="https://twitter.com/hashtag/webdev?src=hash">#webdev</a>{' '}
     <a href="https://twitter.com/hashtag/javascript?src=hash">#javascript</a>
   </p>
-  — Kyle Shevlin (@kyleshevlin){' '}
-  <a href="https://twitter.com/kyleshevlin/status/834529080162738177">
-    February 22, 2017
-  </a>
+  — Kyle Shevlin (@kyleshevlin) <a href="https://twitter.com/kyleshevlin/status/834529080162738177">February 22, 2017</a>
 </blockquote>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
