--- a/src/content/posts/why-I-rewrote-my-blog-in-gatsby/index.mdx
+++ b/src/content/posts/why-I-rewrote-my-blog-in-gatsby/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Why I Rewrote My Blog With Gatsby'
 subtitle: 'Or How to Respond When Your WordPress Blog Gets Hacked'
+description: 'Learn why I recently had to abandon my WordPress setup and opted for Gatsby instead.'
 date: '2019-01-09T00:00:00.000Z'
 slug: 'why-i-rewrote-my-blog-with-gatsby'
 tags: ['Gatsby', 'React']
@@ -17,8 +18,23 @@ That's when I realized that I had been hacked. Fuck.
 
 Here's a tweet thread regaling my woes that evening as I discovered the hacker had been changing my posts for _four whole months_!
 
-<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">This really makes me feel good. I&#39;m working on a blog post and referencing an old post of mine when I noticed that there was copy I DEFINITELY did not put in the post. Turns out the post was updated 4 weeks ago. FUCK. <a href="https://t.co/hiLooSj0mX">pic.twitter.com/hiLooSj0mX</a></p>&mdash; Kyle Shevlin (@kyleshevlin) <a href="https://twitter.com/kyleshevlin/status/1078805204542345216?ref_src=twsrc%5Etfw">December 29, 2018</a></blockquote>
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<blockquote class="twitter-tweet" data-lang="en">
+  <p lang="en" dir="ltr">
+    This really makes me feel good. I&#39;m working on a blog post and
+    referencing an old post of mine when I noticed that there was copy I
+    DEFINITELY did not put in the post. Turns out the post was updated 4 weeks
+    ago. FUCK. <a href="https://t.co/hiLooSj0mX">pic.twitter.com/hiLooSj0mX</a>
+  </p>
+  &mdash; Kyle Shevlin (@kyleshevlin){' '}
+  <a href="https://twitter.com/kyleshevlin/status/1078805204542345216?ref_src=twsrc%5Etfw">
+    December 29, 2018
+  </a>
+</blockquote>
+<script
+  async
+  src="https://platform.twitter.com/widgets.js"
+  charset="utf-8"
+></script>
 
 I never did find the exact point of weakness that the hacker used to get in and mess with my stuff, but I suspect it comes from my inattentiveness to updating plugins and WordPress itself. It would be nice to be able to trust something like that to be secure, but it seems weaknesses are found and exploited regularly.
 
