--- a/src/content/posts/zenos-paradox-of-infinite-loop-scrolling/index.mdx
+++ b/src/content/posts/zenos-paradox-of-infinite-loop-scrolling/index.mdx
@@ -3,6 +3,7 @@ date: '2017-02-17T00:00:00.000Z'
 slug: 'zenos-paradox-of-infinite-loop-scrolling'
 subtitle: 'or Everything Moves but You'
 title: "Zeno's Paradox of Infinite Loop Scrolling"
+description: 'I recently learned a lesson eerily similar to a Greek paradox.'
 tags: ['JavaScript']
 ---
 
