--- a/src/content/posts/head-scratcher-1-2d-array-from-array-of-objects/index.mdx
+++ b/src/content/posts/head-scratcher-1-2d-array-from-array-of-objects/index.mdx
@@ -4,6 +4,7 @@ date: '2017-02-16T00:00:00.000Z'
 slug: 'head-scratcher-1-2d-array-from-array-of-objects'
 subtitle: 'Making a 2D Array by Sorting an Array of Objects'
 title: 'Head Scratcher #1'
+description: 'Read along as I solve a tricky problem with Array.reduce()'
 relevantCourseNickname: 'dsa'
 ---
 
