--- a/src/content/posts/how-to-dynamically-render-react-components/index.mdx
+++ b/src/content/posts/how-to-dynamically-render-react-components/index.mdx
@@ -3,6 +3,7 @@ tags: ['React']
 date: '2017-02-08T00:00:00.000Z'
 slug: 'how-to-dynamically-render-react-components'
 title: 'How to Dynamically Render React Components'
+description: 'Learn how to dynamically render React components based on a discriminated object property.'
 ---
 
 I am currently working on a React/Redux universally rendered application at work. It has some fun parts and I want to share what I've learned from building them.
