--- a/src/content/posts/just-enough-functional-programming-course-launch/index.mdx
+++ b/src/content/posts/just-enough-functional-programming-course-launch/index.mdx
@@ -3,6 +3,7 @@ tags: ['Functional Programming', 'JavaScript']
 date: '2019-03-22T00:00:00.000Z'
 slug: 'just-enough-functional-programming-course-launch'
 title: 'Just Enough Functional Programming Course Launch'
+description: 'I released a course on Egghead about functional programming. Check it out.'
 relatedPostsSlugs:
   [
     'just-enough-fp-higher-order-functions',
