--- a/src/content/posts/my-favorite-git-aliases/index.mdx
+++ b/src/content/posts/my-favorite-git-aliases/index.mdx
@@ -2,6 +2,7 @@
 date: '2015-09-10T00:00:00.000Z'
 slug: 'my-favorite-git-aliases'
 title: 'My Favorite Git Aliases'
+description: 'Learn some of my favorite git aliases.'
 tags: ['Bash']
 ---
 
