--- a/src/content/posts/using-and-and-or-in-bash-scripts/index.mdx
+++ b/src/content/posts/using-and-and-or-in-bash-scripts/index.mdx
@@ -2,6 +2,7 @@
 date: '2016-03-09T00:00:00.000Z'
 slug: 'using-and-and-or-in-bash-scripts'
 title: 'Using && and || in Bash Scripts'
+description: 'Learn how to use logical AND and OR in bash.'
 tags: ['Bash']
 ---
 
