add post description; fix typos

--- a/src/content/posts/tailwind-full-height-layout/index.mdx
+++ b/src/content/posts/tailwind-full-height-layout/index.mdx
@@ -3,7 +3,7 @@ date: '2024-03-30T18:23:51.338Z'
 slug: 'tailwind-minimum-full-height-layout'
 title: 'Tailwind "Minimum Full Height" Layout'
 subtitle: null
-description: ''
+description: 'I&apos;ve been using Tailwind CSS on a lot of projects lately. Almost all my layouts for these projects are some version of the "minimum full height" layout, and I wanted to quickly show you how I do that with Tailwind.'
 excerpt: null
 tags: ['Tailwind', 'CSS']
 relatedPostsSlugs: []
@@ -11,7 +11,7 @@ relatedPostsSlugs: []
 
 import { Example } from './_components.tsx'
 
-I've been using [Tailwind CSS](https://tailwindcss.com/) on a lot of projects lately. Almost all my layouts for these projects are some version of the "minimum full height", and I wanted to show you quickly how I do that with Tailwind.
+I've been using [Tailwind CSS](https://tailwindcss.com/) on a lot of projects lately. Almost all my layouts for these projects are some version of the "minimum full height" layout, and I wanted to quickly show you how I do that with Tailwind.
 
 The keys are:
 
