--- a/src/content/posts/tailwind-full-height-layout/index.mdx
+++ b/src/content/posts/tailwind-full-height-layout/index.mdx
@@ -1,7 +1,7 @@
 ---
 date: '2024-03-30T18:23:51.338Z'
 slug: 'tailwind-minimum-full-height-layout'
-title: 'Tailwind "Minimum Full Height" Layout'
+title: 'Tailwind &ldquo;Minimum Full Height&rdquo; Layout'
 subtitle: null
 description: 'I&apos;ve been using Tailwind CSS on a lot of projects lately. Almost all my layouts for these projects are some version of the "minimum full height" layout, and I wanted to quickly show you how I do that with Tailwind.'
 excerpt: null
