--- a/src/content/posts/two-types-of-composition/index.mdx
+++ b/src/content/posts/two-types-of-composition/index.mdx
@@ -215,7 +215,7 @@ On the other hand, function/nesting composition is often superior in terms of st
 
 Be honest with yourself. How well do you know CSS? Do you know precisely what you're doing, or do you need to be able to throw stuff at the wall? There's no shame in the answer, I promised, but you might be able to guess what my future post will be about based on how you respond.
 
-Consider our simple example above with the `Button`. It's so much easier for devs to throw more classes at the CSS, or use the `style` prop, rather than recognize recognize, "If I wrap this `Button` in a `Row`, it will achieve the result I'm looking for!" I know devs can get there. I've trained them to do it and seen it happen, but it's not intuitive for many of them.
+Consider our simple example above with the `Button`. It's so much easier for devs to throw more classes at the CSS, or use the `style` prop, rather than recognize, "If I wrap this `Button` in a `Row`, it will achieve the result I'm looking for!" I know devs can get there. I've trained them to do it and seen it happen, but it's not intuitive for many of them.
 
 ### Summary
 
